# backend/handlers/tasksHandlers.go
@@ -72,8 +72,9 @@ func GetTasks(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Security ApiKeyAuth
 // @Param user body models.CreateTask true "User data"
-// @Success 200 {object} map[string]interface{} "Список задач"
+// @Success 200 {object} map[string]interface{} "successfully"
 // @Failure 401 {object} map[string]string "Unauthorized"
+// @Failure 500 {object} map[string]string "Internal Server Error"
 // @Router /task [post]
 func CreateTask(w http.ResponseWriter, r *http.Request) {
 	userID, ok := r.Context().Value(middleware.UserIDKey).(string)
@@ -102,5 +103,45 @@ func CreateTask(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusCreated)
+	json.NewEncoder(w).Encode(task)
+}
+
+// @SummaryGet Update task
+// @Description Update task
+// @Tags tasks
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param user body models.UpdateTask true "User data"
+// @Success 200 {object} map[string]interface{} "successfully"
+// @Failure 401 {object} map[string]string "Unauthorized"
+// @Failure 500 {object} map[string]string "Internal Server Error"
+// @Router /tasks/{id} [patch]
+func UpdateTask(w http.ResponseWriter, r *http.Request) {
+	userID, ok := r.Context().Value(middleware.UserIDKey).(string)
+	task := r.Context().Value(middleware.ContextTaskKey).(models.Task)
+
+	if !ok || userID == "" {
+		http.Error(w, "Unauthorized", http.StatusUnauthorized)
+		return
+	}
+
+	objID, err := primitive.ObjectIDFromHex(userID)
+
+	if err != nil {
+		http.Error(w, "Invalid user ID", http.StatusBadRequest)
+		return
+	}
+
+	task.UserID = objID
+
+	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
+	defer cancel()
+
+	if _, err := taskCollection.UpdateOne(ctx, bson.M{"_id": task.ID}, bson.M{"$set": task}); err != nil {
+		http.Error(w, "Failed to update task", http.StatusInternalServerError)
+		return
+	}
+
 	json.NewEncoder(w).Encode(task)
 }
